Add page content

--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,15 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          
+          <h1 id="config-federation">Config Federation</h1>
+<h2 id="concept">Concept</h2>
+<p>United repository of all essential configs for your frontend projects.</p>
+<h2 id="forget-about-dependency-hell">Forget about dependency hell</h2>
+<p>This library will handle all the common dependencies and rules. At the same time it will let you modify all the configs for your specific needs.</p>
+<h2 id="installation-and-usage">Installation and usage</h2>
+<ul>
+<li><a href="https://github.com/aalto95/config-federation/tree/main/vue#readme">Vue 3 Documentation</a></li>
+</ul>
         </div>
         <a href="/posts/my-first-post/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
       </div>
